# hoteval-sdk

./: .gitignore  DEVELOPMENT.md  LICENSE  Makefile  README.md  todo.md
.github/: dependabot.yml
.github/workflows/: general.yml  python-ci.yml  release.yml  security.yml
examples/: agent_configuration.py  application_structure.py  basic_usage.py  best_practice_agents.py  environment_configuration.py  multiple_agents.py
python/: README.md  pyproject.toml
python/hoteval/: __init__.py  agent.py  client.py  runs.py  steps.py  types.py
python/scripts/release/: README.md  prepare.py  push.py  shared.py
python/tests/: test_basic.py
